crates/uitest/fixtures/ty/def/alias_kind_mismatch.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/alias_kind_mismatch.fe
---
error[2-0011]: incorrect number of generic arguments for `S0`; expected 2, given 3
  ┌─ alias_kind_mismatch.fe:6:11
  │
6 │ type T1 = S0<i32, u32, i64>
  │           ^^ expected 2 arguments, but 3 were given

error[3-0001]: invalid type argument kind
  ┌─ alias_kind_mismatch.fe:7:11
  │
7 │ type T2 = S0<S0, i64>
  │           ^^^^^^^^^^^ expected `*` kind, but `S0` has `(* -> (* -> *))` kind

error[3-0001]: invalid type argument kind
   ┌─ alias_kind_mismatch.fe:12:8
   │
12 │     t: T3<i32, S0>,
   │        ^^^^^^^^^^^ expected `*` kind, but `S0` has `(* -> (* -> *))` kind
